TWC3167-1645 : Overlapping deal CSS fixes and maximize and minimize functionality (#1165)

--- a/Intel.MyDeals/Client/src/app/contract/ptModals/overLappingCheckDeals/overlappingCheckDeals.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/ptModals/overLappingCheckDeals/overlappingCheckDeals.component.css
@@ -11,3 +11,7 @@
     padding: 0 !important;
     overflow: hidden !important;
 }
+
+#OvrLp .k-grid {
+    height: 100% ;
+}
